Bug 253254 - Network process shouldn't load Cairo
Summary: Network process shouldn't load Cairo
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Don Olmstead
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-02 10:01 PST by Don Olmstead
Modified: 2023-03-02 16:10 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Don Olmstead 2023-03-02 10:01:09 PST
Cairo's default font options was moved to a static NeverDestroyed but its at file scope so it always gets created.
Comment 1 Don Olmstead 2023-03-02 10:10:17 PST
Pull request: https://github.com/WebKit/WebKit/pull/10947
Comment 2 EWS 2023-03-02 16:08:08 PST
Committed 261107@main (4fac13b14ab4): <https://commits.webkit.org/261107@main>

Reviewed commits have been landed. Closing PR #10947 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-03-02 16:10:36 PST
<rdar://problem/106169499>