Cherry-pick 261107@main (4fac13b14ab4). https://bugs.webkit.org/show_bug.cgi?id=253254

Network process shouldn't load Cairo
    https://bugs.webkit.org/show_bug.cgi?id=253254

    Reviewed by Fujii Hironori.

    Move creation of `s_defaultCairoFontOptions` to function scope so it is
    only created when needed.

    * Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp:

    Canonical link: https://commits.webkit.org/261107@main